Updated sizing issues on mobile

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -234,7 +234,6 @@
 /* ============================================================================== */
 * {
   box-sizing: border-box;
-  outline: 1px solid red;
 }
 
 html,
@@ -483,7 +482,7 @@ a {
   flex-wrap: nowrap;
 }
 .topbar__logo {
-  height: calc(var(--row-height) * var(--topbar-rows));
+  height: 48px;
   width: auto;
   display: block;
 }
