--- a/public/assets/scss/layout/_topbar.scss
+++ b/public/assets/scss/layout/_topbar.scss
@@ -13,7 +13,7 @@
   }
 
   &__logo {
-    height: calc(var(--row-height) * var(--topbar-rows));
+    height: 48px;
     width: auto;
     display: block;
   }
